# rust-backend-api-jwt

./: .env  .env.demo  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.demo.yml  docker-compose.yml
Dokumentasi/: ALUR.md
migrations/: 20260205084808_create_users_table.sql
src/: main.rs
src/config/: database.rs
src/handlers/: login_handler.rs  mod.rs  register_handler.rs  user_handler.rs
src/middlewares/: auth_middleware.rs
src/models/: user.rs
src/routes/: auth_routes.rs  user_routes.rs
src/schemas/: login_schema.rs  mod.rs  register_schema.rs  user_schema.rs
src/utils/: jwt.rs
